# cloud-functions-training

./: README.md  pyproject.toml
src/apps/: script_cloud_functions.py
